# KiKitViewer

./: .gitignore  LICENSE  PLAN.md  README.md  install_plugin.bat  install_plugin.py  install_plugin.sh  metadata.json  packages.json  pyproject.toml  repository.json
plugins/: __init__.py  kikit_viewer_plugin.py
scripts/: build_pcm.py
src/kikit_viewer/: main.py
src/kikit_viewer/config/: model.py  schema.py  serialization.py  translation.py
src/kikit_viewer/examples/: example_text_script.py
src/kikit_viewer/geometry/: board_outline.py
src/kikit_viewer/plugins/: manual_tabs.py  table_layout.py
src/kikit_viewer/renderer/: color_theme.py  pcbnew_renderer.py
src/kikit_viewer/runner/: kikit_runner.py  panel_worker.py  run_coordinator.py
src/kikit_viewer/ui/: debug_dock.py  layers_panel.py  main_window.py
src/kikit_viewer/ui/canvas/: board_overlay_item.py  fiducial_handle_item.py  handle_item.py  pcb_panel_view.py  scene.py  tab_marker_item.py  text_handle_item.py  tooling_handle_item.py  view.py
src/kikit_viewer/ui/params/: _layout_geometry.py  base_panel.py  cuts_panel.py  framing_panel.py  grid_layout_widget.py  layout_panel.py  post_panel.py  table_layout_widget.py  tabs_panel.py  text_panel.py
