[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "kikit-viewer"
dynamic = ["version"]
description = "Visual KiKit panel editor — pcbnew plugin"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Avetos Design", email = "engineering@avetosdesign.com" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "shapely>=2.0",
    "qtawesome>=1.3",
]

[project.scripts]
kikit-viewer = "kikit_viewer.main:main"

[tool.setuptools.dynamic]
version = {attr = "kikit_viewer._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
